# pysh

./: .gitignore  README.md  demo.py  poetry.sh  pyproject.toml  regtext.py  test.py  todo.md
pysh/: __init__.py  pype.py  shrunner.py  utils.py
src/pysh/: __init__.py  pype.py  serializer.py  utils.py
tests/: features.py  myscript.sh  regtext.py  stdout.py
