[tool.poetry]
name = "pyshpype"
version = "0.1.2"
description = "Run shell in python"
authors = [
    "Blipk A.D."
]
homepage = "https://github.com/blipk/pysh"
repository = "https://github.com/blipk/pysh"
documentation = "https://github.com/blipk/pysh"
license = "MIT"

# README file(s) are used as the package description
readme = "README.md" #, "LICENSE"
keywords = ["pysh", "shell", "bash"] # Keywords (translated to tags on the package index)
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "pysh", from = "src" }
]
# include = [
#     { path = "tests", format = "sdist" }
# ]


[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.10"

# # Dependency groups are supported for organizing your dependencies
# [tool.poetry.group.dev.dependencies]
# pytest = "^7.1.2"
# pytest-cov = "^3.0"

# # ...and can be installed only when explicitly requested
# [tool.poetry.group.docs]
# optional = true
# [tool.poetry.group.docs.dependencies]
# Sphinx = "^5.1.1"

# # Python-style entrypoints and scripts are easily expressed
# [tool.poetry.scripts]
# my-script = "my_package:main"